--- a/GUI/View/RentalView.xaml
+++ b/GUI/View/RentalView.xaml
@@ -54,7 +54,7 @@
                     <!-- Tilpas bindingsnavne til jeres model -->
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Id"          Binding="{Binding RentalId}" Width="80"/>
-                        <DataGridTextColumn Header="Placering"   Binding="{Binding Location}"      Width="*"/>
+                        <DataGridTextColumn Header="Reol"   Binding="{Binding ShelfUnit.ShelvingUnitID}"      Width="*"/>
                         <DataGridTextColumn Header="Antal hylder" Binding="{Binding ShelfCount}"   Width="110"/>
                         <DataGridTextColumn Header="Status"      Binding="{Binding StatusText}"    Width="120"/>
                         <DataGridTextColumn Header="Lejer"       Binding="{Binding Tenant.Name}"    Width="*"/>
@@ -126,7 +126,7 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="Pris" VerticalAlignment="Center" Grid.Column="0" Margin="0,0,8,0"/>
-                        <TextBox x:Name="PriceAgreement" Grid.Column="1" Height="28" Text="{Binding SelectedRental.Price, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBox x:Name="PriceAgreement" Grid.Column="1" Height="28" Text="{Binding SelectedRental.PriceAgreement, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
 
                     <!--Lejer dropdown-->
