--- a/GUI/View/ItemView.xaml
+++ b/GUI/View/ItemView.xaml
@@ -8,7 +8,192 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
-            <UserControl:MenuComponent/>
-            <Button Content="Item view"></Button>
+        <UserControl:MenuComponent/>
+        <!-- YDERGRID: Header + indhold (venstre liste / højre formular) -->
+        <Grid 
+            Background="White" 
+            Margin="12">
+            <Grid.RowDefinitions>
+                <RowDefinition 
+                    Height="Auto"/>
+                <!-- header -->
+                <RowDefinition 
+                    Height="*"/>
+                <!-- content -->
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition 
+                    Width="2*"/>
+                <!-- venstre -->
+                <ColumnDefinition 
+                    Width="12"/>
+                <!-- lodret gutter -->
+                <ColumnDefinition 
+                    Width="1.4*"/>
+                <!-- højre -->
+            </Grid.ColumnDefinitions>
+
+            <!-- HEADER -->
+            <TextBlock Grid.Row="0"
+                   Text="Varer" 
+                        FontSize="20"
+                        FontWeight="Bold"
+                        HorizontalAlignment="Left" 
+                        Margin="0,2,0,19"/>
+
+            <!-- VENSTRE: Søg + DataGrid + 'Tilføj vare' -->
+            <Grid Grid.Row="1" Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition 
+                        Height="Auto"/>
+                    <!-- søg -->
+                    <RowDefinition 
+                        Height="*"/>
+                    <!-- tabel -->
+                    <RowDefinition 
+                        Height="Auto"/>
+                    <!-- knap -->
+                </Grid.RowDefinitions>
+
+                <!-- Søg -->
+                <StackPanel 
+                    Grid.Row="0" 
+                    Margin="0,0,0,8">
+                    <TextBlock 
+                        Text="Søg" 
+                               FontWeight="SemiBold" />
+                    <TextBox 
+                        x:Name="SearchBox" 
+                             Height="28"
+                         ToolTip="Søg efter titel eller nr." />
+                </StackPanel>
+
+                <!-- Tabel -->
+                <DataGrid 
+                    Grid.Row="1"
+                      x:Name="ItemsGrid"
+                      AutoGenerateColumns="False"
+                      HeadersVisibility="Column"
+                      CanUserAddRows="False"
+                      IsReadOnly="True"
+                      Margin="0,0,0,8"
+                      SelectionMode="Single"
+                    ItemsSource="{Binding Items}"
+                    SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
+                    <!-- Tilpas bindingsnavne til jeres model/VM -->
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Id"     Binding="{Binding ItemId}" Width="30" />
+                        <DataGridTextColumn Header="Titel"  Binding="{Binding Name}"  Width="180" />
+                        <DataGridTextColumn Header="Pris"   Binding="{Binding Price}"  Width="50" />
+                        <DataGridTextColumn Header="Reol"   Binding="{Binding ShelfUnitNumber}" Width="50" />
+                    </DataGrid.Columns>
+                </DataGrid>
+
+                <Button 
+                    Grid.Row="2"
+                    Content="Tilføj vare" 
+                    Width="110" 
+                    Height="32"
+                    HorizontalAlignment="Left"/>
+            </Grid>
+
+            <!-- HØJRE: Formular -->
+            <Border 
+                Grid.Row="1" Grid.Column="2"
+                BorderBrush="White" 
+                BorderThickness="1" 
+                CornerRadius="4" 
+                Padding="16">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <!-- Titel -->
+                        <RowDefinition Height="Auto"/>
+                        <!-- Pris -->
+                        <RowDefinition Height="Auto"/>
+                        <!-- Reol -->
+                        <RowDefinition Height="*"/>
+                        <!-- fyld / luft -->
+                        <RowDefinition Height="Auto"/>
+                        <!-- knapper -->
+                    </Grid.RowDefinitions>
+
+                    <!-- Titel -->
+                    <Grid Grid.Row="0" Margin="0,0,0,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock 
+                            Text="Titel" 
+                            VerticalAlignment="Center"/>
+                        <TextBox 
+                            x:Name="TitleBox" 
+                            Grid.Column="1" 
+                            Height="28"
+                            Text="{Binding newName, UpdateSourceTrigger=PropertyChanged}"/>
+                    </Grid>
+
+                    <!-- Pris -->
+                    <Grid 
+                        Grid.Row="1" Margin="0,0,0,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock 
+                            Text="Pris" 
+                            VerticalAlignment="Center"/>
+                        <TextBox 
+                            x:Name="PriceBox" 
+                            Grid.Column="1" 
+                            Height="28"
+                            Text="{Binding newPrice, UpdateSourceTrigger=PropertyChanged}"/>
+                    </Grid>
+
+                    <!-- Reol -->
+                    <Grid 
+                        Grid.Row="2" Margin="0,0,0,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock 
+                            Text="Reol" 
+                            VerticalAlignment="Center"/>
+                        <ComboBox 
+                            x:Name="ShelfCombo" 
+                            Grid.Column="1" 
+                            Height="28"
+                              IsEditable="False">
+                            <!-- Dummy data til design-time – fjern når I binder -->
+                            <ComboBoxItem Content="R26"/>
+                            <ComboBoxItem Content="R27"/>
+                            <ComboBoxItem Content="R28"/>
+                        </ComboBox>
+                    </Grid>
+
+                    <!-- Knapper -->
+                    <StackPanel 
+                        Grid.Row="4" 
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Left" 
+                        Margin="0,8,0,0">
+                        <Button 
+                            Content="Gem"  
+                            Width="90" 
+                            Height="32"
+                            Margin="0,0,8,0"
+                            Command="{Binding UpdateItemCommand}"/>
+                        <Button 
+                            Content="Slet" 
+                            Width="90" 
+                            Height="32"
+                            Command="{Binding DeleteItemCommand}"/>
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </Grid>
     </StackPanel>
 </UserControl>
